# WinDarkMode

./: .clangd  CONTRIBUTING.md  README.md  WinDarkMode.h
.zed/: tasks.json
demo/: CMakeLists.txt  CMakePresets.json  app.manifest  dialog.rc  main.cpp  resource.h
test/: CMakeLists.txt  dialog.rc  main.cpp  resource.h
